# QA_Rag

./: README.md  __init__.py  evaluation.py  evalution_test.ipynb  llm_test.ipynb  memo_code.ipynb  output.json  parameter_test.ipynb  pdf_test.ipynb  process_test.ipynb  pyproject.toml  test.ipynb
Utils/: __init__.py  bm25_chinese_retriever.py  evaluation.py  retriever.py  vector_database.py
database/: insurance.pkl
dataset/preliminary/: questions_example.json
llm/: llm_generate.py  main_taide_llama3_api.py
