[tool.poetry]
name = "qa-rag"
version = "0.1.0"
description = ""
authors = ["marksu901104 <marksu901104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.6"
jieba = "^0.42.1"
pdfplumber = "^0.11.4"
rank-bm25 = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
